fixed scrollbar height

--- a/src/components/styles/aboutCard.scss
+++ b/src/components/styles/aboutCard.scss
@@ -1,18 +1,6 @@
 @import '../../color.scss';
-::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-}
 
-/* Style the scrollbar thumb */
-::-webkit-scrollbar-thumb {
-    background-color: $dark-red;
-    border-radius: 5px;
-}
 
-/* Style the scrollbar thumb on hover */
-::-webkit-scrollbar-thumb:hover {
-    background-color: $dark-red;
-}
 .card-header{
     display: flex;
     justify-content: flex-start;
@@ -30,4 +18,5 @@
     font-family: 0.55rem;
     width: 85%;
     margin-bottom: 2.5rem;
+    // overflow: hidden;
 }
