--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -12,9 +12,8 @@ h1 {
 }
 
 .about-content{
-    overflow: scroll;
     
-    max-height: 30rem;
+    max-height: 40rem;
 h1 {
         font-weight: 300;
         font-size: 4rem;
